[package]
name = "json-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
env_logger = "0.10"
log = "0.4"
dotenv = "0.15" 
prometheus = "0.13"
actix-web-prometheus = "0.1"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16" # Use the latest version available

actix-cors = "0.6"
actix-governor = "0.4"


uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
config = "0.13"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"




[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true  
opt-level = 3